# ansi-c

./: .gitignore  CMakeLists.txt  LICENCE.md  README.md
exercise_1_1/: CMakeLists.txt  main.c
exercise_1_10/: CMakeLists.txt  main.c
exercise_1_11/: CMakeLists.txt  main.c
exercise_1_12/: CMakeLists.txt  main.c
exercise_1_13/: CMakeLists.txt  main.c
exercise_1_14/: CMakeLists.txt  main.c
exercise_1_15/: CMakeLists.txt  main.c
exercise_1_16/: CMakeLists.txt  main.c
exercise_1_17/: CMakeLists.txt  main.c
exercise_1_18/: CMakeLists.txt  main.c
exercise_1_19/: CMakeLists.txt  main.c
exercise_1_2/: CMakeLists.txt  main.c
exercise_1_3/: CMakeLists.txt  main.c
exercise_1_4/: CMakeLists.txt  main.c
exercise_1_5/: CMakeLists.txt  main.c
exercise_1_6/: CMakeLists.txt  main.c
exercise_1_7/: CMakeLists.txt  main.c
exercise_1_8/: CMakeLists.txt  main.c
exercise_1_9/: CMakeLists.txt  main.c
